--- a/front/src/app/components/admin/client-details/client-details.component.html
+++ b/front/src/app/components/admin/client-details/client-details.component.html
@@ -1,8 +1,7 @@
 <div class="container-global">
     <div class="container-left">
-
         <h2>Cliente</h2>
-        <label for="email">Elige un email</label> <br>
+        <label class="label-email" for="email">Elige un email</label> <br>
         <select (ngModelChange)="selectedemail($event)" [ngModel]="email" name="email" required>
             <option *ngFor="let customer of customers" value={{customer.email}}>{{customer.email}} </option>
         </select>
@@ -24,41 +23,26 @@
             <input type="text" formControlName="province" placeholder="Provincia">
 
         </form>
-
-
-
     </div>
     <div class="container-right">
-
         <div class="table">
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Fecha</th>
-                        <th>
-                            ISBN
-                        </th>
-                        <th>
-                            Título del Cómic
-                        </th>
-
-                        <th>
-                            Autor
-                        </th>
-                        <th>
-                            Géneros
-                        </th>
+                        <th>ISBN</th>
+                        <th>Título del Cómic</th>
+                        <th>Autor</th>
+                        <th>Géneros</th>
                         <th>Precio</th>
-                        <th>
-                            Tapa
-                        </th>
+                        <th>Tapa</th>
                     </tr>
                 </thead>
                 <tbody *ngIf="orderemail">
                     <tr *ngFor="let order of ordersOnCurrentPage">
                         <td>{{order.date | date: 'dd-MM-yyyy'}}</td>
-                        <td><a [routerLink]="['/comic', order.comic.isbn]"></a>{{ order.comic.isbn }}</td>
-                        <td><a [routerLink]="['/comic', order.comic.isbn]">{{ order.comic.title }}</a></td>
+                        <td>{{ order.comic.isbn }}</td>
+                        <td>{{ order.comic.title }}</td>
                         <td>{{ order.comic.author }}</td>
                         <td>
                             <span *ngFor="let genre of order.comic.genres; let last = last">
