--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,6 @@
 
-<!-- <router-outlet></router-outlet> -->
-<app-client-details></app-client-details>
+<router-outlet></router-outlet> 
+<!-- <app-headeradmin></app-headeradmin>
+<app-client-details></app-client-details> -->
 <app-footer></app-footer>
 
