--- a/front/src/app/shared/headeradmin/headeradmin.component.html
+++ b/front/src/app/shared/headeradmin/headeradmin.component.html
@@ -9,7 +9,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">List. Cómics</a>
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">List. Usuarios</a>
-      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Compras Clientes</a>
+      <a class="nav-item nav-link" routerLink="/purchase-history/:email" (click)="closeMenu()">Compras Clientes</a>
         <a class="close nav-item nav-link" routerLink="" (click)="closeMenu()">Cerrar Sesión</a>
     </div>
   </div>
