added the new component in admin folder

--- a/front/src/app/components/user/comic-detail/comic-detail.component.html
+++ b/front/src/app/components/user/comic-detail/comic-detail.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="comic" class="row my-5" style="overflow-y: auto; ">
   <div class="col-md-6 col-sm-12" >
-    <img [src]="'../../../assets/images/comics/'+comic.photo" alt="{{ comic.title }} Cover" class="img-fluid m-5">
+    <img [src]="'http://localhost:8000/files/'+comic.photo" alt="{{ comic.photo }} Cover" class="img-fluid m-5">
     <br>
    
   </div>
