added more than one genres

--- a/front/src/app/components/admin/new/new.component.scss
+++ b/front/src/app/components/admin/new/new.component.scss
@@ -25,6 +25,12 @@ h2{
     width: 20%;
     padding: 1%;
   }
+  .btn-short{
+    // cursor:pointer;
+    width: auto;
+    height: auto;
+    padding:1px;
+  }
   
  
   
