--- a/front/src/app/components/admin/new/new.component.html
+++ b/front/src/app/components/admin/new/new.component.html
@@ -31,6 +31,21 @@
                 <label for="synopsis">Sinopsis</label>
                 <input type="text" class="form-control" id="synopsis" placeholder="Sinopsis" formControlName="synopsis">
               </div>
+              <div class="form-group">
+                <label for="genre">Genero</label>
+                <select class="form-control" id="genre" placeholder="Genero" formControlName="genre" (ngModelChange)="addGenreToList($event)">
+                  <option disabled [ngValue]="null">-Seleccione un genero-</option>
+                  <!-- <option>-Seleccione un genero-</option> -->
+                  <option *ngFor="let aGenre of genres" [ngValue]="aGenre">{{aGenre.name}}
+                  </option>
+                </select>
+              </div>
+              <div class="list" #divList>
+                <span *ngFor="let aCurrentGenre of currentGenres;let i = index;">
+                  {{aCurrentGenre.name}}
+                  <button class="btn-short" (click)="deleteGenre(i)">x</button>
+                </span>
+              </div>
 
               <div class="form-group">
                 <label for="ishardcover">Tapa</label>
@@ -76,21 +91,7 @@
               {{ message }}
             </div>
           </div>
-          <div class="row">
-            <div class="form-group">
-              <label for="genre">Genero</label>
-              <select class="form-control" id="genre" placeholder="Genero" formControlName="genre" (ngModelChange)="newGenre($event)">
-                <option>-Seleccione un genero-</option>
-                <option *ngFor="let aGenre of genres" [ngValue]="aGenre">{{aGenre.name}}
-                </option>
-              </select>
-            </div>
-            <div class="list" #list>
-              <ul>
-                <li>fdfdf</li>
-              </ul>
-            </div>
-          </div>
+          
 
 
         </div>
