Change image to edit 80%

--- a/front/src/app/components/admin/edit-comic/edit-comic.component.scss
+++ b/front/src/app/components/admin/edit-comic/edit-comic.component.scss
@@ -8,6 +8,17 @@
     margin-bottom: -5vh;
    
 }
+.form-control {
+  display: block;
+  width: 176%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;}
+
+.img-fluid {
+  max-width: 50%;
+  height: auto;
+  margin-left: 18vh;}
 
 .custom-modal{
     background-color: rgba(29, 41, 81, 1)
