--- a/front/src/app/components/admin/new/new.component.html
+++ b/front/src/app/components/admin/new/new.component.html
@@ -29,11 +29,17 @@
               </div>
               <div class="form-group">
                 <label for="synopsis">Sinopsis</label>
-                <input type="text" class="form-control" id="synopsis" placeholder="Sinopsis" formControlName="synopsis">
+                <textarea class="form-control" id="synopsis" placeholder="Sinopsis"
+                  formControlName="synopsis"></textarea>
               </div>
+              <!-- <div class="form-group">
+                <label for="synopsis">Sinopsis</label>
+                <input type="text" class="form-control" id="synopsis" placeholder="Sinopsis" formControlName="synopsis">
+              </div> -->
               <div class="form-group">
                 <label for="genre">Genero</label>
-                <select class="form-control" id="genre" placeholder="Genero" formControlName="genre" (ngModelChange)="addGenreToList($event)">
+                <select class="form-control" id="genre" placeholder="Genero" formControlName="genre"
+                  (ngModelChange)="addGenreToList($event)">
                   <option disabled [ngValue]="null">-Seleccione un genero-</option>
                   <!-- <option>-Seleccione un genero-</option> -->
                   <option *ngFor="let aGenre of genres" [ngValue]="aGenre">{{aGenre.name}}
@@ -42,8 +48,7 @@
               </div>
               <div class="list" #divList>
                 <span *ngFor="let aCurrentGenre of currentGenres;let i = index;">
-                  {{aCurrentGenre.name}}
-                  <button class="btn-short" (click)="deleteGenre(i)">x</button>
+                  <{{aCurrentGenre.name}} <button class="btn-short" (click)="deleteGenre(i)">x</button>>
                 </span>
               </div>
 
@@ -55,9 +60,9 @@
                 </select>
               </div>
 
-              <div class="form-group">
+              <div class="form-group remove-spinner">
                 <label for="price">Precio</label>
-                <input type="number" class="form-control" id="price" placeholder="Precio" formControlName="price">
+                <input type="number" class="form-control " id="price" placeholder="Precio" formControlName="price">
               </div>
 
               <div class="form-group">
@@ -91,19 +96,11 @@
               {{ message }}
             </div>
           </div>
-          
-
-
         </div>
       </div>
       <div class="row flex">
         <button type="submit" class="btn btn-success">Añadir Comic</button>
       </div>
-
-
-
     </form>
-    <hr>
-    <pre></pre>
   </div>
 </div>
