--- a/front/src/app/components/admin/new/new.component.scss
+++ b/front/src/app/components/admin/new/new.component.scss
@@ -31,6 +31,22 @@ h2{
     height: auto;
     padding:1px;
   }
+
+  //style.scss
+.remove-spinner>input[type=number]::-webkit-inner-spin-button, 
+.remove-spinner>input[type=number]::-webkit-outer-spin-button {
+  /* Chrome, Safari, Edge, Opera */
+  -webkit-appearance: none; 
+  margin: 0; 
+
+  }
+ 
+  /* Firefox */
+  .remove-spinner>input[type=number] {//se puede poner [matInput]
+    appearance: textfield;  
+    
+   }
+ 
   
  
   
