New component is finish

--- a/front/src/app/components/admin/new/new.component.scss
+++ b/front/src/app/components/admin/new/new.component.scss
@@ -10,6 +10,7 @@ h2{
      color: white;
      padding-top: 1%;
      padding-bottom: 1%;
+     border-radius: 2vh;
      
   }
   //.row{
@@ -24,9 +25,15 @@ h2{
   button{
     width: 20%;
     padding: 1%;
-  }
+    background-color:  rgba(29, 41, 81, 1);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 1vh;
+    font-size:x-large;
+    font-family: 'Alice', serif;
+}
   .btn-short{
-    // cursor:pointer;
+  
     width: auto;
     height: auto;
     padding:1px;
