--- a/front/src/app/components/admin/new/new.component.html
+++ b/front/src/app/components/admin/new/new.component.html
@@ -32,16 +32,13 @@
                 <textarea class="form-control" id="synopsis" placeholder="Sinopsis" formControlName="synopsis"
                 ></textarea>
               </div>
-              <!-- <div class="form-group">
-                <label for="synopsis">Sinopsis</label>
-                <input type="text" class="form-control" id="synopsis" placeholder="Sinopsis" formControlName="synopsis">
-              </div> -->
+             
               <div class="form-group">
                 <label for="genre">Genero</label>
 
                 <select class="form-control" id="genre" placeholder="Genero" formControlName="genre" (ngModelChange)="addGenreToList($event)">
                   <option disabled [ngValue]="null">-Seleccione un genero-</option>
-                  <!-- <option>-Seleccione un genero-</option> -->
+               
 
                   <option *ngFor="let aGenre of genres" [ngValue]="aGenre">{{aGenre.name}}
                   </option>
@@ -104,7 +101,7 @@
         </div>
       </div>
       <div class="row flex">
-        <button type="submit" class="btn btn-success">Añadir Comic</button>
+        <button type="submit" >Añadir Comic</button>
       </div>
 
 
