--- a/front/src/app/components/admin/modificate-comics/modificate-comics.component.html
+++ b/front/src/app/components/admin/modificate-comics/modificate-comics.component.html
@@ -125,6 +125,9 @@
         </tbody>
       </table>
     </div>
+    <div class="add-button-container">
+      <a routerLink="/newcomic" class="add-button">Añadir</a>
+    </div>
     <div class="pagination-container">
       <nav aria-label="Page navigation">
         <ul class="pagination">
@@ -153,4 +156,5 @@
           </li>
         </ul>
       </nav>
+  
     </div>
