--- a/front/src/app/components/admin/new/new.component.scss
+++ b/front/src/app/components/admin/new/new.component.scss
@@ -11,6 +11,7 @@ h2{
      padding-top: 1%;
      padding-bottom: 1%;
      border-radius: 2vh;
+
      
   }
   //.row{
@@ -31,6 +32,7 @@ h2{
     border-radius: 1vh;
     font-size:x-large;
     font-family: 'Alice', serif;
+    margin-bottom: 4vh;
 }
   .btn-short{
   
