--- a/front/src/app/components/admin/modificate-comics/modificate-comics.component.scss
+++ b/front/src/app/components/admin/modificate-comics/modificate-comics.component.scss
@@ -9,6 +9,29 @@ table {
     border-collapse: separate;
     border: 0.4vh solid black;
   }
+  .add-button-container {
+    text-align: right;
+    margin-top: 20px;
+  }
+  
+  .add-button {
+    display: inline-block;
+    background-color: white;
+    border: 2px solid black;
+    padding: 10px 40px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: x-large;
+    border-radius: 5px;
+    margin-right: 30vh;
+  }
+  
+  .add-button:hover {
+    background-color: black;
+    color: white;
+  }
+ 
   a{
     cursor:pointer;
   }
