--- a/front/src/app/components/admin/new/new.component.html
+++ b/front/src/app/components/admin/new/new.component.html
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="row flex">
-        <button type="submit" >Añadir Comic</button>
+        <button type="submit" >Añadir</button>
       </div>
 
 
