--- a/front/src/app/components/admin/edit-comic/edit-comic.component.html
+++ b/front/src/app/components/admin/edit-comic/edit-comic.component.html
@@ -103,7 +103,7 @@
               <img [src]="'http://localhost:8000/files/' + editedComic.photo" class="img-fluid small-image" alt="Foto Actual">
             </div>
             <div class="form-group">
-              <label for="photo">Nueva Foto</label>
+              <label for="photo"></label>
               <input
                 type="file"
                 class="form-control-file"
