--- a/front/src/app/components/admin/new/new.component.html
+++ b/front/src/app/components/admin/new/new.component.html
@@ -80,7 +80,7 @@
         <div class="col-6">
           <div class="row">
             <label class="image-upload-container btn btn-bwm">
-              <span>Selecciona una imagen </span>
+              <span>Selecciona Imagen </span>
               <input #imageInput type="file" accept="image/*" (change)="selectFile($event)">
             </label>
             <div>
