--- a/front/src/app/components/admin/new/new.component.html
+++ b/front/src/app/components/admin/new/new.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset 2">
     <div class="row flex">
-      <h2>Añadir nuevo Comic</h2>
+      <h2>Añadir nuevo cómic</h2>
     </div>
 
 
