--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,7 @@
 
-<router-outlet></router-outlet> 
-<!-- <app-headeradmin></app-headeradmin>
-<app-client-details></app-client-details> -->
+<!-- <router-outlet></router-outlet>  -->
+<app-headeradmin></app-headeradmin>
+<!-- <app-client-details></app-client-details> -->
+<app-user-list-admin></app-user-list-admin>
 <app-footer></app-footer>
 
