--- a/front/src/app/shared/headerclient/headerclient.component.html
+++ b/front/src/app/shared/headerclient/headerclient.component.html
@@ -16,6 +16,10 @@
     <div class="icons d-none d-sm-none d-none d-md-block">
       <img src="/assets/cart.png"  alt="cart" routerLink="/cart">
       <img src="/assets/user.png" alt="user"> 
+      <div>
+        <p *ngIf="loggedInEmail">Usuario conectado: {{ loggedInEmail }}</p>
+        <p *ngIf="!loggedInEmail">Usuario no conectado</p>
+      </div>
     </div>
   </div>
 </nav>
