--- a/front/src/app/components/admin/edit-comic/edit-comic.component.html
+++ b/front/src/app/components/admin/edit-comic/edit-comic.component.html
@@ -102,7 +102,8 @@
               <label for="photo"></label>
               <img [src]="'http://localhost:8000/files/' + editedComic.photo" class="img-fluid small-image" alt="Foto Actual">
             </div>
-            <div class="form-group">
+          </div>
+            <!-- <div class="form-group">
               <label for="photo"></label>
               <input
                 type="file"
@@ -110,15 +111,15 @@
                 id="photo"
                 name="photo"
                 (change)="onImageSelected($event)"
-              />
-              <img
+              /> -->
+              <!-- <img
                 *ngIf="photoPreviewUrl"
                 [src]="photoPreviewUrl"
                 class="img-fluid small-image"
                 alt="Nueva Foto"
-              />
-            </div>
-          </div>
+              /> -->
+            <!-- </div>
+          </div> -->
           
         </form>
 
